--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,11 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap");
+* {
+  border: 3px solid blue;
+}
+
 html,
 body {
   margin: 0;
   padding: 0;
   font-family: "Inter", sans-serif;
-  width: 100vw;
 }
 
 h2 {
@@ -264,20 +267,19 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 605px;
   border: 3px solid blue;
 }
 .chemins-partages .carousel {
   border-radius: 6px;
-  width: 980px;
-  height: 605px;
   overflow: hidden;
   position: relative;
+  width: 60vw;
 }
 .chemins-partages .slides {
   display: flex;
   transition: transform 0.6s ease;
+  width: 100%;
+  height: 100%;
 }
 .chemins-partages .slide {
   flex-shrink: 0;
@@ -289,8 +291,8 @@ a {
   justify-content: center;
 }
 .chemins-partages .slide img {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
   object-fit: contain;
 }
 
