--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,12 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap');
 
+// sass --watch assets/css/style.scss assets/css/index.css
+
+* {
+    border: 3px solid blue;
+}
+
 html,
 body {
     margin: 0;
     padding: 0;
     font-family: 'Inter', sans-serif;
-    width: 100vw;
+    // width: 100vw;
 }
 
 
@@ -200,6 +206,7 @@ a {
         }
     }
 
+    // coupable de non-responsive
     img {
         height: 563px;
         width: 493px;
@@ -283,29 +290,29 @@ a {
 
 
 
-            .qsn-photo {
+        .qsn-photo {
 
-                width: 45%;
-                height: 450px;
+            width: 45%;
+            height: 450px;
 
 
-                img {
-                    width: 100%;
-                }
+            img {
+                width: 100%;
             }
+        }
 
-            .qsn-txt {
-                width: 45%;
-                padding: 15px;
-                align-self: flex-end;
-                border: 3px solid #A1C862;
-                border-radius: 4px;
+        .qsn-txt {
+            width: 45%;
+            padding: 15px;
+            align-self: flex-end;
+            border: 3px solid #A1C862;
+            border-radius: 4px;
 
-                 p {
-                    font-size: 22px;
-                    font-weight: 500;
-                 }
+            p {
+                font-size: 22px;
+                font-weight: 500;
             }
+        }
     }
 
 }
@@ -338,24 +345,26 @@ a {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 100%;
-        height: 605px;
         border: 3px solid blue;
-
     }
 
 
     .carousel {
         border-radius: 6px;
-        width: 980px;
-        height: 605px;
+
         overflow: hidden;
         position: relative;
+
+        width: 60vw;
     }
+
+    // faire media query taille 100% à partir de taille d'écran = tablette (905px)
 
     .slides {
         display: flex;
         transition: transform 0.6s ease;
+        width: 100%;
+        height: 100%;
     }
 
     .slide {
@@ -369,8 +378,8 @@ a {
     }
 
     .slide img {
-        max-width: 100%;
-        max-height: 100%;
+        width: 100%;
+        height: 100%;
         object-fit: contain;
     }
 }
@@ -784,9 +793,6 @@ a {
             background-color: #8AAF4C;
             cursor: pointer;
         }
-
-
-
     }
 }
 
