--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,9 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap");
-* {
-  border: 3px solid blue;
-}
-
 html,
 body {
   margin: 0;
@@ -221,6 +217,9 @@ a {
   }
 }
 /* QUI SOMMES NOUS ? */
+.qui-sommes-nous * {
+  border: 3px solid blue;
+}
 .qui-sommes-nous .qsn-container {
   height: 60vh;
   width: 100%;
@@ -239,6 +238,9 @@ a {
 }
 .qui-sommes-nous .qsn-container .qsn-txt {
   grid-area: 3/3/6/6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 15px;
   border: 3px solid #A1C862;
   border-radius: 4px;
@@ -267,7 +269,6 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 3px solid blue;
 }
 .chemins-partages .carousel {
   border-radius: 6px;
