--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -217,35 +217,38 @@ a {
   }
 }
 /* QUI SOMMES NOUS ? */
-.qui-sommes-nous * {
-  border: 3px solid blue;
-}
 .qui-sommes-nous .qsn-container {
-  height: 60vh;
+  height: 75vh;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(5, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  border: 1px solid red;
 }
 .qui-sommes-nous .qsn-container .qsn-photo {
   grid-area: 1/1/4/4;
+  max-width: 50vw;
 }
 .qui-sommes-nous .qsn-container .qsn-photo img {
   width: 100%;
 }
 .qui-sommes-nous .qsn-container .qsn-txt {
   grid-area: 3/3/6/6;
+  width: -moz-fit-content;
+  width: fit-content;
+  align-self: end;
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: justify;
+  background-color: #fff;
+  border: 4px solid #A1C862;
+  border-radius: 10px;
   padding: 15px;
-  border: 3px solid #A1C862;
-  border-radius: 4px;
 }
 .qui-sommes-nous .qsn-container .qsn-txt p {
+  margin: 0;
   font-size: 22px;
   font-weight: 500;
 }
