--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -234,20 +234,34 @@ a {
   width: 100%;
 }
 .qui-sommes-nous .qsn-container .qsn-txt {
-  grid-area: 3/3/6/6;
-  width: -moz-fit-content;
-  width: fit-content;
+  grid-area: 1/3/6/6;
   align-self: end;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   text-align: justify;
+}
+.qui-sommes-nous .qsn-container .qsn-txt .qsn-tournesol {
+  max-width: 23vw;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  flex-direction: column;
+  margin-left: 15vw;
+}
+.qui-sommes-nous .qsn-container .qsn-txt .qsn-tournesol img {
+  width: 100%;
+}
+.qui-sommes-nous .qsn-container .qsn-txt .qsn-p {
   background-color: #fff;
+  width: -moz-fit-content;
+  width: fit-content;
   border: 4px solid #A1C862;
   border-radius: 10px;
   padding: 15px;
 }
-.qui-sommes-nous .qsn-container .qsn-txt p {
+.qui-sommes-nous .qsn-container .qsn-txt .qsn-p p {
   margin: 0;
   font-size: 22px;
   font-weight: 500;
