--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -312,30 +312,43 @@ a {
         }
 
         .qsn-txt {
-            grid-area: 3 / 3 / 6 / 6;
-            // max-height: 30vh;
-            width: -moz-fit-content;
-            width: fit-content;
-
+            grid-area: 1 / 3 / 6 / 6;
             align-self: end;
 
             display: flex;
             align-items: center;
             justify-content: center;
+            flex-direction: column;
             text-align: justify;
 
-            background-color: #fff;
+            .qsn-tournesol {
+                max-width: 23vw;
+                display: flex;
+                justify-content: center;
+                align-items: end;
+                flex-direction: column;
 
-            border: 4px solid #A1C862;
-            border-radius: 10px;
+                margin-left: 15vw;
 
-            padding: 15px;
+                img {
+                    width: 100%;
+                }
+            }
 
-            p {
-                margin: 0;
+            .qsn-p {
+                background-color: #fff;
+                width: -moz-fit-content;
+                width: fit-content;
+                border: 4px solid #A1C862;
+                border-radius: 10px;
+                padding: 15px;
 
-                font-size: 22px;
-                font-weight: 500;
+                p {
+                    margin: 0;
+
+                    font-size: 22px;
+                    font-weight: 500;
+                }
             }
         }
     }
