--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -12,7 +12,8 @@ h2 {
   font-size: 40px;
   font-weight: 700;
   font-family: "EB Garamond", serif;
-  margin-top: 70px;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
   padding-top: 50px;
 }
 
@@ -234,56 +235,115 @@ a {
   }
 }
 /* QUI SOMMES NOUS ? */
-.qui-sommes-nous .qsn-container {
-  height: 75vh;
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
+@media screen and (max-width: 700px) {
+  .qsn-tournesol {
+    display: none;
+  }
+  .qsn-photo img {
+    width: 100%;
+  }
+  p {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.3;
+  }
 }
-.qui-sommes-nous .qsn-container .qsn-photo {
-  max-width: 50vw;
-  grid-area: 1/1/4/4;
+@media screen and (min-width: 700px) {
+  .qui-sommes-nous .qsn-container {
+    height: 60vh;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
+  .qui-sommes-nous .qsn-container .qsn-photo {
+    max-width: 60vw;
+    grid-area: 1/1/4/4;
+  }
+  .qui-sommes-nous .qsn-container .qsn-photo img {
+    width: 100%;
+  }
+  .qui-sommes-nous .qsn-container .qsn-txt {
+    grid-area: 1/3/6/6;
+    align-self: end;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: justify;
+  }
+  .qui-sommes-nous .qsn-container .qsn-txt .qsn-tournesol {
+    max-width: 23vw;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    flex-direction: column;
+    margin-left: 15vw;
+  }
+  .qui-sommes-nous .qsn-container .qsn-txt .qsn-tournesol img {
+    width: 100%;
+  }
+  .qui-sommes-nous .qsn-container .qsn-txt .qsn-p {
+    background-color: #fff;
+    width: -moz-fit-content;
+    width: fit-content;
+    border: 4px solid #A1C862;
+    border-radius: 10px;
+    padding: 15px;
+  }
+  .qui-sommes-nous .qsn-container .qsn-txt .qsn-p p {
+    margin: 0;
+    font-size: 22px;
+    font-weight: 500;
+  }
 }
-.qui-sommes-nous .qsn-container .qsn-photo img {
-  width: 100%;
+@media screen and (min-width: 1500px) {
+  .qui-sommes-nous .qsn-photo {
+    width: 852px;
+  }
+  .qui-sommes-nous .qsn-tournesol {
+    width: 325px;
+  }
 }
-.qui-sommes-nous .qsn-container .qsn-txt {
-  grid-area: 1/3/6/6;
-  align-self: end;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  text-align: justify;
+@media screen and (min-width: 2200px) {
+  .qui-sommes-nous .qsn-photo {
+    margin-left: 4vw;
+  }
+  .qui-sommes-nous .qsn-txt {
+    margin-bottom: 3vh;
+    margin-right: 5vw;
+    width: 90%;
+  }
 }
-.qui-sommes-nous .qsn-container .qsn-txt .qsn-tournesol {
-  max-width: 23vw;
-  display: flex;
-  justify-content: center;
-  align-items: end;
-  flex-direction: column;
-  margin-left: 15vw;
+@media screen and (min-width: 2580px) {
+  .qui-sommes-nous .qsn-photo {
+    margin-left: 10vw;
+  }
+  .qui-sommes-nous .qsn-tournesol {
+    margin-right: 12vw;
+  }
+  .qui-sommes-nous .qsn-txt {
+    margin-bottom: 3vh;
+    margin-right: 25vw;
+    width: 85%;
+  }
+  .qui-sommes-nous .qsn-txt .qsn-p p {
+    font-size: 27px !important;
+  }
 }
-.qui-sommes-nous .qsn-container .qsn-txt .qsn-tournesol img {
-  width: 100%;
+@media screen and (min-width: 3150px) {
+  .qui-sommes-nous .qsn-photo {
+    margin-left: 12.5vw;
+  }
+  .qui-sommes-nous .qsn-tournesol {
+    margin-right: 14vw;
+  }
+  .qui-sommes-nous .qsn-txt {
+    width: 75%;
+  }
 }
-.qui-sommes-nous .qsn-container .qsn-txt .qsn-p {
-  background-color: #fff;
-  width: -moz-fit-content;
-  width: fit-content;
-  border: 4px solid #A1C862;
-  border-radius: 10px;
-  padding: 15px;
-}
-.qui-sommes-nous .qsn-container .qsn-txt .qsn-p p {
-  margin: 0;
-  font-size: 22px;
-  font-weight: 500;
-}
-
 /* LES CHEMINS PARTAGES */
 .chemins-partages p {
   font-size: 24px;
@@ -331,9 +391,6 @@ a {
   object-fit: contain;
 }
 
-@media screen and (max-width: 978px) {
-  /* REGLER PB ESPACEMENT BLANC SOUS LE CARROUSSEL */
-}
 @media screen and (max-width: 396px) {
   .chemins-partages p {
     font-size: 22px;
@@ -341,6 +398,18 @@ a {
   }
   .chemins-partages .devenir-benevole a {
     font-size: 29px;
+  }
+}
+@media screen and (max-width: 750px) {
+  .carousel {
+    width: 100% !important;
+  }
+}
+@media screen and (max-width: 700px) {
+  .chemins-partages p {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.3;
   }
 }
 /* LES ESPACES PARTAGES */
@@ -427,6 +496,13 @@ a {
     width: 425px;
   }
 }
+@media screen and (max-width: 700px) {
+  .espaces-partages p {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.3;
+  }
+}
 @media screen and (max-width: 485px) {
   .espaces-partages .logo-2-generations img {
     height: 77px;
@@ -468,6 +544,13 @@ a {
   font-weight: 500;
 }
 
+@media screen and (max-width: 700px) {
+  .taches-partagees p {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.3;
+  }
+}
 @media screen and (max-width: 1400px) {
   .taches-partagees .taches-content img {
     height: 525px;
