--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,8 +5,14 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Inter", sans-serif;
+  text-align: justify;
 }
 
+@media screen and (max-width: 370px) {
+  body {
+    overflow-x: hidden;
+  }
+}
 h2 {
   color: #264020;
   font-size: 40px;
@@ -188,7 +194,7 @@ a {
   margin: 0;
   padding: 0;
   font-weight: 500;
-  font-size: 26px;
+  font-size: 32px;
   margin-top: 15px;
 }
 .bienvenu img {
@@ -735,9 +741,34 @@ a {
     font-size: 17px;
   }
 }
+/* AIDE */
+.aide-img {
+  display: flex;
+  justify-content: center;
+  margin-top: 10vh;
+}
+.aide-img img {
+  width: 50%;
+}
+
+@media screen and (max-width: 800px) {
+  .aide-img img {
+    width: 70%;
+  }
+}
+@media screen and (max-width: 580px) {
+  .aide-img img {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 450px) {
+  .aide-img img {
+    width: 90%;
+  }
+}
 /* ASSOCIES */
 .associes {
-  margin-top: 120px;
+  margin-top: 10vh;
   margin-bottom: 70px;
   display: flex;
   justify-content: center;
