--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,7 +12,15 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Inter', sans-serif;
+    text-align: justify;
     // width: 100vw;
+}
+
+@media screen and (max-width: 370px) {
+
+    body {
+        overflow-x: hidden;
+    }
 }
 
 h2 {
@@ -234,7 +242,7 @@ a {
             margin: 0;
             padding: 0;
             font-weight: 500;
-            font-size: 26px;
+            font-size: 32px;
             margin-top: 15px;
         }
     }
@@ -1131,10 +1139,52 @@ a {
     }
 }
 
+
+/* AIDE */
+
+.aide-img {
+    display: flex;
+    justify-content: center;
+    margin-top: 10vh;
+
+    img {
+        width: 50%;
+    }
+}
+
+
+
+@media screen and (max-width: 800px) {
+
+    .aide-img {
+        img {
+            width: 70%;
+        }
+    }
+}
+
+@media screen and (max-width: 580px) {
+
+    .aide-img {
+        img {
+            width: 80%;
+        }
+    }
+}
+
+@media screen and (max-width: 450px) {
+
+    .aide-img {
+        img {
+            width: 90%;
+        }
+    }
+}
+
 /* ASSOCIES */
 
 .associes {
-    margin-top: 120px;
+    margin-top: 10vh;
     margin-bottom: 70px;
     display: flex;
     justify-content: center;
