--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -854,5 +854,18 @@ footer p {
   font-size: 18px;
   font-weight: 400;
 }
+footer a {
+  text-decoration: none;
+  color: #fff;
+  border-bottom: 1px solid transparent;
+  margin: 0;
+  padding: 0;
+  margin-left: 5px;
+  font-size: 18px;
+}
+footer a:hover {
+  border-bottom: 1px solid black;
+  color: black;
+}
 
 /*# sourceMappingURL=index.css.map */
