--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1300,4 +1300,14 @@ footer {
         border-bottom: 1px solid black;
         color: black;
       }
+
+      .docs {
+        padding: 0;
+        padding-bottom: 20px;
+
+        a {
+            color: black;
+            font-weight: 600;
+        }
+      }
 }
